added build configs

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "React TypeScript library for selecting elements on a web page",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc-watch",
-    "build": "tsc",
-    "prepare": "npm run build"
+    "build": "rollup -c",
+    "start": "rollup -c -w"
   },
   "repository": {
     "type": "git",
@@ -35,11 +36,18 @@
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "babel-core": "^6.26.3",
+    "babel-runtime": "^6.26.0",
     "nodemon": "^2.0.22",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "rollup": "^3.26.2",
+    "rollup-plugin-sass": "^1.12.19",
+    "rollup-plugin-typescript2": "^0.35.0",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.1.6"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "js-element-picker": "^0.1.2"
