--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,23 @@
     "compilerOptions": {
       "declaration": true,
       "outDir": "dist",
-      "module": "commonjs",
-      "target": "es6",
-      "lib": ["es6", "dom"],
-      "strict": true,
-      "allowSyntheticDefaultImports": true,
-      "jsx": "react"
+      "module": "esnext",
+      "target": "es5",
+      "lib": ["es6", "dom", "es2016", "es2017"],
+      "sourceMap": true,
+    "allowJs": false,
+    "jsx": "react",
+    "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "allowSyntheticDefaultImports": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules", "dist"],
+    "exclude": ["node_modules", "dist", "example", "rollup.config.mjs"]
 }
   
